crates/data-dict/tests/snapshots/validate_spec__enum_non_string_label.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: status
        type: enum
        values: {active: 1, inactive: 2}
────────────────────────────────────────
Error: [Q-1-11] YAML Validation Failed
   ╭─[ dict.yaml:8:18 ]
   │
 8 │         values: {active: 1, inactive: 2}
   │                  ───────────┬──────────  
   │                             ╰──────────── Expected array, got object
───╯
✖ At document path: `tables.[0].columns.[0].values`
ℹ Schema constraint: object > array > object > array > object > anyOf > array
ℹ Use YAML array syntax: `[item1, item2]` or list format?
